@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -54,7 +53,7 @@ public class StreamPractice {
                 .filter(m -> m.getSex() == Person.Sex.MAN
                         && m.getAge() >= fromAge
                         && m.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -73,7 +72,7 @@ public class StreamPractice {
                 .filter(p -> p.getAge() >= fromAge
                         && ((p.getSex() == Person.Sex.WOMAN && p.getAge() <= femaleToAge)
                         || (p.getSex() == Person.Sex.MAN && p.getAge() <= maleToAge)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -88,7 +87,7 @@ public class StreamPractice {
                         && !p.getCats().isEmpty())
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
